test_scores/negative_dimers/features/Q9UKG1.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9UKG1.pkl.xz